src/snapshots/alma__infer__tests__test_infer_module__constructing_a_union_type.snap
---
source: src/infer.rs
assertion_line: 3413
expression: "infer(\"\\\nmodule Test exposing (main)\n\ntype Fruit a = Banana (a -> a -> a)\n\nmain = Banana 1\n\")"
---
Input:

module Test exposing (main)

type Fruit a = Banana (a -> a -> a)

main = Banana 1


---
Output:

Test.alma [5:14]

Type mismatch:  Float  ≠  a -> a -> a

Expected

  3│  type Fruit a = Banana (a -> a -> a)
  4│  
  5│  main = Banana 1
   │                ↑

to be

    a -> a -> a

but seems to be

    Float
