src/snapshots/alma__infer__tests__test_infer_module__exposing-3.snap
---
source: src/infer.rs
assertion_line: 2497
expression: "infer(\"\nmodule Test exposing (c)\n\na = 1\n\nb = 2\n           \")"
---
Input:


module Test exposing (c)

a = 1

b = 2
           

---
Output:

Test.alma [2:22]

Undefined identifier `c`

  1│  
  2│  module Test exposing (c)
   │                        ↑
  3│  
  4│  a = 1
