src/snapshots/alma__infer__tests__test_infer_module__exposing_lambdas.snap
---
source: src/infer.rs
assertion_line: 2083
expression: "infer(\"\\\nmodule Test exposing (main, add)\n\nadd x y = x + y\n\nmain = add 5\n\")"

---
Input:

module Test exposing (main, add)

add x y = x + y

main = add 5


---
Output:

[5:7]

Type mismatch:  Float -> a  ≠  Float -> Float -> Float

Expected

  3│  add x y = x + y
  4│  
  5│  main = add 5
   │         ↑↑↑↑↑

to be

Float -> Float -> Float

but seems to be

Float -> a
