src/snapshots/alma__infer__tests__test_infer_module__exposing_type-2.snap
---
source: src/infer.rs
assertion_line: 2203
expression: "infer(\"\\\nmodule Test exposing (Fruit)\n\ntype Fruit = Banana a\n\")"

---
Input:

module Test exposing (Fruit)

type Fruit = Banana a


---
Output:

[3:20]

Type variable `a` has not been declared

  1│  module Test exposing (Fruit)
  2│  
  3│  type Fruit = Banana a
   │                      ↑
