src/snapshots/alma__infer__tests__test_infer_module__exposing_type-3.snap
---
source: src/infer.rs
assertion_line: 2725
expression: "infer(\"\\\nmodule Test exposing (Fruita)\n\ntype Fruit = Banana\n\")"
---
Input:

module Test exposing (Fruita)

type Fruit = Banana


---
Output:

Test.alma [1:22]

Couldn't find type `Fruita`

  1│  module Test exposing (Fruita)
   │                        ↑↑↑↑↑↑
  2│  
  3│  type Fruit = Banana
