src/snapshots/alma__infer__tests__test_infer_module__exposing_union_type_constructor.snap
---
source: src/infer.rs
assertion_line: 2785
expression: "infer(\"\\\nmodule Test exposing (Banana)\n\ntype Fruit = Banana\n\")"
---
Input:

module Test exposing (Banana)

type Fruit = Banana


---
Output:

Test.alma [1:22]

Couldn't find type `Banana`

  1│  module Test exposing (Banana)
   │                        ↑↑↑↑↑↑
  2│  
  3│  type Fruit = Banana
